--- a/SpringBoot_Demo/pom.xml
+++ b/SpringBoot_Demo/pom.xml
@@ -3,16 +3,16 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
+ 
 	<groupId>com.example</groupId>
 	<artifactId>SpringBoot_Demo</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1-SNAPSHOT</version> 
 	<packaging>war</packaging>
- 
+  
 	<name>SpringBoot_Demo</name>
 	<description>Demo project for Spring Boot</description>
 
-	<parent>
+	<parent> 
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.5.16.RELEASE</version>
@@ -65,6 +65,13 @@
 			<artifactId>spring-boot-starter-data-jpa
 			</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-jta-narayana</artifactId>
+		</dependency>
+		
+		
 
 		<!-- mysql -->
 		<dependency>
@@ -88,13 +95,27 @@
 			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
 
-		<!--  fastjson -->
+		<!--  fastjson --> 
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
 			<version>1.2.15</version>
 		</dependency>
-
+		
+		
+		<!-- JWT核心依赖 -->
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>3.3.0</version>
+		</dependency>
+		<!-- java开发JWT的依赖jar包。 -->
+		<dependency>
+		    <groupId>io.jsonwebtoken</groupId>
+		    <artifactId>jjwt</artifactId>
+		    <version>0.9.0</version>
+		</dependency>
+ 
 
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
@@ -105,6 +126,7 @@
 			<artifactId>weld-core-impl</artifactId>
 			<version>2.2.9.Final</version>
 		</dependency>
+		
 	</dependencies>
 
 
@@ -147,5 +169,5 @@
 		</profile>
 	</profiles>
 	
-
+ 
 </project>
